# game

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  bundle.sh  docker-compose.yml  install.sh  run.sh  uninstall.sh
.pc/: applied-patches
debian/: control  md5sums  postinst.ex  preinst.ex  rules
debian/deadlywish/DEBIAN/: control  copyright
ijengine/: CMakeLists.txt  Makefile
ijengine/kernel/sdl2/: CMakeLists.txt  Makefile  kernel.so.0.1.0
ijengine/src/: engine.cpp
ijengine/test/src/: test_game.cpp  test_level_factory.cpp
include/: base.h  character.h  character_choose_level.h  character_factory.h  character_selection.h  character_state.h  character_state_factory.h  death_match_level.h  fireball.h  frost_nova.h  ije02_game.h  infiltrator.h  knight.h  mage.h  main_level.h  menu_level.h  skill.h  soldier.h  spear.h  test_level_factory.h  translator.h  util.h
package/DEBIAN/: changelog  control  copyright
res/sound/Música-FX/: Jogo (Provisório).mid  personagens versão apresentação c musica.wmv  personagens versão apresentação.wmv
src/: base.cpp  character.cpp  character_choose_level.cpp  character_factory.cpp  character_selection.cpp  character_state_factory.cpp  credits_level.cpp  death_match_level.cpp  fireball.cpp  frost_nova.cpp  idle_state.cpp  ije02_game.cpp  infiltrator.cpp  knight.cpp  mage.cpp  main.cpp  main_level.cpp  menu_level.cpp  moving_state.cpp  skill.cpp  soldier.cpp  spear.cpp  test_level_factory.cpp  translator.cpp  winner_level.cpp
